edit driver class